--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "exec": "^0.2.1",
     "express": "~4.13.1",
     "rmdir": "^1.2.0",
     "sequelize": "^3.19.3",
